add resize control

--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -9,6 +9,9 @@
       &.control {
         fill: rgba(245, 249, 251, 0.7);
       }
+      &.control_resize {
+        fill: rgba(221, 234, 243, 0.7);
+      }
     }
   }
 
