--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -1,9 +1,23 @@
 .pyx_chart_container {
   width: 100%;
   background-color: white;
+  position: relative;
+
+  .tooltip {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
 
   svg {
     display: block;
+
+    circle {
+      fill: white;
+      stroke-width: 2;
+    }
 
     rect {
       &.control {
