--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -9,6 +9,27 @@
     z-index: 1;
     background-color: white;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    padding: 8px;
+    align-items: center;
+    justify-items: center;
+    flex-direction: column;
+    .items {
+      display: flex;
+      align-items: center;
+      > div {
+        display: flex;
+        margin-left: 8px;
+        margin-right: 8px;
+        flex-direction: column;
+        span.value {
+          font-size: 16px;
+          font-weight: bold;
+        }
+        span.item {
+          font-size: 14px;
+        }
+      }
+    }
   }
 
   svg {
