--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -2,6 +2,9 @@
   width: 100%;
   background-color: white;
   position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
   .tooltip {
     display: none;
@@ -34,6 +37,7 @@
 
   svg {
     display: block;
+    z-index: 1;
 
     circle {
       fill: white;
