--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -6,6 +6,75 @@
   align-items: center;
   flex-direction: column;
 
+  .controls {
+    margin-top: 8px;
+    display: flex;
+    min-height: 40px;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .night_mode_control {
+    a {
+      font-size: 20px;
+      user-select: none;
+      color: #55abeb;
+    }
+  }
+
+  .checkbox_container {
+    display: flex;
+    border-radius: 20px;
+    background-color: white;
+    border: 1px solid #e7ecf0;
+    padding: 5px;
+    .round {
+      margin-top: 2px;
+      position: relative;
+    }
+
+    .label {
+      margin-left: 3px;
+      margin-top: 2px;
+    }
+
+    .round label {
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 50%;
+      cursor: pointer;
+      height: 14px;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 14px;
+    }
+
+    .round label:after {
+      border: 2px solid #fff;
+      border-top: none;
+      border-right: none;
+      content: '';
+      height: 3px;
+      left: 3px;
+      opacity: 0;
+      position: absolute;
+      top: 3px;
+      transform: rotate(-45deg);
+      width: 7px;
+      font-size: 5px;
+    }
+
+    .round input[type='checkbox'] {
+      visibility: hidden;
+    }
+
+    .round input[type='checkbox']:checked + label:after {
+      opacity: 1;
+    }
+  }
+
   .tooltip {
     display: none;
     position: absolute;
@@ -119,6 +188,14 @@
   }
 
   &.night {
+    .checkbox_container {
+      background-color: #26303d;
+      border-color: #374656;
+      .label {
+        color: white;
+      }
+    }
+
     .tooltip {
       background-color: #273340;
       p {
