--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -20,6 +20,9 @@
       font-size: 20px;
       user-select: none;
       color: #55abeb;
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
@@ -29,6 +32,14 @@
     background-color: white;
     border: 1px solid #e7ecf0;
     padding: 5px;
+
+    label {
+      &.not_active {
+        background-color: unset !important;
+        border-color: #e7ecf0 !important;
+      }
+    }
+
     .round {
       margin-top: 2px;
       position: relative;
@@ -194,6 +205,13 @@
       border-color: #374656;
       .label {
         color: white;
+      }
+
+      label {
+        &.not_active {
+          background-color: unset !important;
+          border-color: #374656 !important;
+        }
       }
     }
 
