--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -86,6 +86,9 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       }
       &.control {
         fill: map-get($color_day, 'controlLeftRightFill');
+        &:hover {
+          cursor: pointer;
+        }
       }
       &.control_resize {
         fill: map-get($color_day, 'controlResizeLeftRightFill');
