--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -24,6 +24,76 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     }
   }
 
+  .preview_container {
+    margin-top: 10px;
+    position: relative;
+    overflow: hidden;
+    .preview_controls {
+      position: absolute;
+      width: 100%;
+      left: 0;
+      top: 0;
+      height: 100%;
+      .control {
+        will-change: transform;
+        height: 100%;
+        position: absolute;
+        &.left,
+        &.right {
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        &.left {
+          width: 100%;
+          background-color: map-get($color_day, 'controlLeftRightFill');
+          .resize {
+            right: -5px;
+          }
+        }
+        &.right {
+          background-color: map-get($color_day, 'controlLeftRightFill');
+          width: 100%;
+          .resize {
+            left: -5px;
+          }
+        }
+        &.center {
+          border-top: 1px solid map-get($color_day, 'controlCenterStoke');
+          border-bottom: 1px solid map-get($color_day, 'controlCenterStoke');
+          height: calc(100% - 2px);
+          &:hover {
+            cursor: grab;
+          }
+          &:active,
+          &:focus {
+            cursor: grabbing;
+          }
+        }
+        .resize {
+          z-index: 2;
+          top: 0;
+          position: absolute;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 20px;
+          &:hover,
+          &:active,
+          &:focus {
+            cursor: col-resize;
+          }
+          .caret {
+            background-color: map-get($color_day, 'controlResizeLeftRightFill');
+            width: 10px;
+            height: 100%;
+          }
+        }
+      }
+    }
+  }
+
   .controls {
     margin-top: 8px;
     display: flex;
@@ -78,39 +148,11 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
   svg {
     display: block;
-    z-index: 1;
     position: relative;
 
     circle {
       fill: white;
       stroke-width: 2;
-    }
-
-    rect {
-      &.center {
-        stroke: map-get($color_day, 'controlCenterStoke');
-        &:hover {
-          cursor: grab;
-        }
-        &:active,
-        &:focus {
-          cursor: grabbing;
-        }
-      }
-      &.control {
-        fill: map-get($color_day, 'controlLeftRightFill');
-        &:hover {
-          cursor: pointer;
-        }
-      }
-      &.control_resize {
-        fill: map-get($color_day, 'controlResizeLeftRightFill');
-        &:hover,
-        &:active,
-        &:focus {
-          cursor: col-resize;
-        }
-      }
     }
   }
 
@@ -135,10 +177,6 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           stroke-width: 3;
         }
       }
-    }
-
-    &.chart_preview {
-      margin-top: 10px;
     }
   }
 
@@ -189,9 +227,12 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       stroke: map-get($color_night, 'lineStroke');
     }
 
-    rect {
-      &.control {
-        fill: map-get($color_night, 'controlLeftRightFill');
+    .preview_controls {
+      .control {
+        &.left,
+        &.right {
+          background-color: map-get($color_night, 'controlLeftRightFill');
+        }
       }
     }
 
