--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -38,6 +38,7 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         will-change: transform;
         height: 100%;
         position: absolute;
+        user-select: none;
         &.left,
         &.right {
           &:hover {
@@ -64,10 +65,6 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           height: calc(100% - 2px);
           &:hover {
             cursor: grab;
-          }
-          &:active,
-          &:focus {
-            cursor: grabbing;
           }
         }
         .resize {
