fix issue with drag

--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -104,6 +104,7 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
 
   .night_mode_control {
+    margin-top: 10px;
     a {
       font-size: 20px;
       user-select: none;
