--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -11,6 +11,12 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   align-items: center;
   flex-direction: column;
 
+  &.animation {
+    path {
+      transition: d 0.15s;
+    }
+  }
+
   .axis_labels {
     user-select: none;
     font-size: 13px;
