--- a/src/styles/checkbox/checkbox.scss
+++ b/src/styles/checkbox/checkbox.scss
@@ -2,6 +2,7 @@
 
 .checkbox_container {
   display: flex;
+  align-items: center;
   border-radius: 20px;
   background-color: map-get($color_day, 'background');
   border: 1px solid map-get($color_day, 'border');
@@ -10,62 +11,43 @@
   &:hover {
     cursor: pointer;
   }
-
-  label {
+  .round {
+    position: relative;
+    transition: background-color 0.2s ease-out;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 14px;
+    width: 14px;
+    border: 1px solid transparent;
+    opacity: 1;
+    &::after {
+      opacity: 1 !important;
+    }
+    &.not_active {
+      &::after {
+        opacity: 0 !important;
+      }
+    }
     &.not_active {
       background-color: unset !important;
       border-color: map-get($color_day, 'border') !important;
     }
+    &::after {
+      border: 2px solid white;
+      border-top: none;
+      border-right: none;
+      content: '';
+      height: 3px;
+      left: 3px;
+      opacity: 0;
+      position: absolute;
+      top: 3px;
+      transform: rotate(-45deg);
+      width: 7px;
+      font-size: 5px;
+    }
   }
-
-  .round {
-    margin-top: 2px;
-    position: relative;
-    width: 18px;
-    height: 18px;
-  }
-
   .label {
-    margin-left: 3px;
-    margin-top: 2px;
-  }
-
-  .round label {
-    background-color: map-get($color_day, 'background');
-    border: 1px solid transparent;
-    border-radius: 50%;
-    cursor: pointer;
-    height: 14px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 14px;
-    transition: background-color 0.2s ease-out;
-  }
-
-  .round label:after {
-    border: 2px solid white;
-    border-top: none;
-    border-right: none;
-    content: '';
-    height: 3px;
-    left: 3px;
-    opacity: 0;
-    position: absolute;
-    top: 3px;
-    transform: rotate(-45deg);
-    width: 7px;
-    font-size: 5px;
-  }
-
-  .round input[type='checkbox'] {
-    visibility: hidden;
-    width: 1px;
-    height: 1px;
-    position: absolute;
-  }
-
-  .round input[type='checkbox']:checked + label:after {
-    opacity: 1;
+    margin-left: 10px;
   }
 }
