--- a/src/styles/charts/chart.scss
+++ b/src/styles/charts/chart.scss
@@ -166,10 +166,8 @@ $toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
   line {
     &.verticle {
-      display: none;
-      &.show {
-        display: block;
-      }
+      transform: translateX(-50px);
+      will-change: transform;
       stroke-width: 2;
     }
     stroke: map-get($color_day, 'lineStroke');
